# data-structures-and-algorithms

./: README.md
python/: README.md  pyproject.toml
python/cc03-array-binary-search/: README.md
python/cc12-stack-queue-animal-shelter/stack-queue-animal-shelter/: pyproject.toml
python/code-challenge02-array-insert-shift/: README.md
python/code-challenge06-linked-list-insertions/linked-list-insertions/: pyproject.toml
python/code-challenge07-linked-list-kth/code-challenge07-linked-list-kth/: pyproject.toml
python/code-challenge11-stack-queue-pseudo/stack-queue-pseudo/: pyproject.toml
python/code_challenges/array_binary_search/: README.md
python/code_challenges/array_insert_shift/: README.md
python/code_challenges/array_reverse/: README.md
python/code_challenges/hashmap-repeated-word/: test_hashmap_repeated_word.py
python/code_challenges/hashmap_repeated_word/: hashmap_repeated_word.py  pyproject.toml  test_hashmap_repeated_word.py
python/code_challenges/trees/: README.md
python/graph/: README.md  graph.py  test_graph.py
python/hashtable/: README.md  hashtable.py
python/linked_list/: linked_list.py
python/stack_and_queue/: queue.py  stack.py
python/tests/: stack_queue_brackets_test.py  test_binary_search_tree.py  test_binary_tree.py  test_binary_tree_find_max.py  test_hashmap_repeated_word.py  test_insertion_sort.py  test_insertions.py  test_linked_list.py  test_queue.py  test_stack.py  test_stack_queue_animal_shelter.py  test_tree.py  test_tree_breadth_first.py  test_zip_linked_lists.py
python/tree/: binary_search_tree.py  binary_tree.py
(+56 files in other folders)
